# sho_dev

./: .eslintignore  env.d.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
.storybook/: main.js
api/: .gitignore  Cargo.toml  docker-compose.yml
api/image_gen/: Cargo.toml
api/image_gen/assets/fonts/: Noto_Sans_JP.zip:Zone.Identifier
api/image_gen/src/: draw.rs  lib.rs  split_title.rs
api/src/: main.rs
api/src/graphql/: mod.rs  schema.rs  util.rs
api/src/graphql/resolver/: post.rs
api/src/model/: post.rs
client/: .eslintrc.json  README.md  env.d.ts  package.json
client/src/apis/: $api.ts  common.ts
client/src/apis/blogs/: index.ts
client/src/components/: Drawer.tsx
client/src/lib/: $path.ts  date.ts  microcms-client.ts
client/src/pages/: index.tsx  product.tsx  profile.tsx
client/src/types/: post.ts
src/apis/: $api.ts
src/components/: Drawer.tsx  Layout.tsx
src/components/Button/: Button.stories.tsx  Button.tsx
src/components/Drawer/: index.tsx
src/components/Post/: PostList.tsx
src/components/layout/: Layout.tsx
src/lib/: date.ts  microcms-client.ts
src/pages/: _app.tsx  index.tsx  profile.tsx
src/pages/posts/: [id].tsx
storybook-static/: 229.a3ab990217173d70558b.manager.bundle.js  295.fd69dd5c2373448c89c3.manager.bundle.js  409.261f240e12e9320fafc1.manager.bundle.js  51.53189bc81a8ccf1259d5.manager.bundle.js  551.1b35eec8e51d7599230b.manager.bundle.js  807.81ff9e0ef75c2c8335d4.manager.bundle.js  897.3be7f84bbcf7a689e528.manager.bundle.js  935.350c0b933df0db08ffb9.manager.bundle.js  index.html  main.a97781d21819c421168f.manager.bundle.js  project.json  runtime~main.9ef1b9cd8b9770d90eb8.manager.bundle.js
(+14 files in other folders)
