[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.5.1"
async-graphql = { version = "3.0.12", features = ["chrono"] }
async-graphql-axum = "^3.0.38"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"]}
anyhow = "1.0.58"
nanoid = "0.4.0"
chrono = { version = "0.4.23", features= ["serde"] }
